cargo-features = []

[package]
name = "unmillis"
version = "1.0.5"
license = "MIT"
description = "Given ğ‘›, solves for ğ‘¥ in the equation `unix-epoch + ğ‘› milliseconds = ğ‘¥`"
readme = "README.md"
repository = "https://github.com/joar/unmillis"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_mangen = "0.2.7"
thiserror = "1.0.30"
num-integer = "0.1.44"
anyhow = { version = "1.0.53", features = ["backtrace"] }
clap = { version = "4.1.4", features = ["derive"] }
chrono = "0.4.19"

[dev-dependencies]
trycmd = { version = "0.14.10" }