cargo-features = []

[package]
name = "unmillis"
version = "1.0.7"
license = "MIT"
description = "Given ğ‘›, solves for ğ‘¥ in the equation `unix-epoch + ğ‘› milliseconds = ğ‘¥`"
readme = "README.md"
repository = "https://github.com/joar/unmillis"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_mangen = "0.2.21"
thiserror = "1.0.61"
num-integer = "0.1.46"
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.7", features = ["derive"] }
chrono = "0.4.38"

[dev-dependencies]
trycmd = { version = "0.15.4" }